css/base.css
body {
  margin: 0;
  padding: 0;
  background: radial-gradient(#dedede 15%, transparent 1%) 0 0, radial-gradient(#dedede 15%, transparent 1%) -8px -8px, radial-gradient(rgba(0, 0, 0, 0.1) 12%, transparent 20%) 0 -1px, radial-gradient(rgba(0, 0, 0, 0.1) 12%, transparent 20%) -8px -9px;
  background-color: #dedede;
  background-size: 16px 16px; }

*,
*:after,
*:before {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-rendering: optimizeLegibility; }

.clear:before,
.clear:after {
  content: ' ';
  display: table; }

.clear:after {
  clear: both; }

.clear {
  *zoom: 1; }

a {
  text-decoration: none; }

nav {
  background-color: #4E3A69;
  color: #fff;
  display: flex;
  font-family: 'Rokkitt', serif;
  font-size: 24px;
  position: relative; }

.logo-container {
  flex: 1;
  padding: 13px 16px 14px;
  color: #b7afd0; }
  .logo-container a {
    color: #b7afd0; }

.logo-container__bold {
  font-weight: 600;
  color: #fff; }

.menu {
  display: inline-flex;
  margin-right: 0px; }

.menu ul {
  margin: 0;
  padding: 0;
  list-style-type: none; }

.menu ul li {
  display: inline-block;
  position: relative;
  transition: all 0.2s ease; }

.menu ul li a {
  display: block;
  padding: 13px 13px 14px;
  color: #fff; }

.menu ul li:hover {
  background-color: #D2A125;
  color: #fff !important;
  z-index: 101; }

.menu ul li ul {
  display: none;
  width: 250px;
  left: 0; }

.menu ul li ul li {
  float: none;
  background: #0cb78a;
  display: block;
  color: #fff;
  border-radius: 0;
  border-top: solid 1px #11c693; }

.menu ul li ul li:first-child {
  border-top: none; }

.menu ul li ul li a {
  width: auto;
  min-width: 100px;
  color: #fff !important; }

.menu ul li ul li a:hover {
  color: white !important;
  background-color: #11c693; }

.menu ul li.mobile-btn {
  display: none; }

.blog-btn {
  visibility: show; }

.menu ul li a:hover + .hidden,
.hidden:hover {
  display: block;
  position: absolute; }

/* Style 'show menu' label button and hide it by default */
.show-menu {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-decoration: none;
  color: #fff;
  text-align: center;
  padding: 10px 0;
  display: none;
  text-indent: -9999; }

.close-menu {
  background: #19c589;
  height: 48px;
  position: relative; }

.close-position {
  position: absolute;
  margin: auto;
  left: 10px;
  top: 0;
  bottom: 0; }

/* Hide checkbox */
input[type=checkbox] {
  display: none;
  -webkit-appearance: none; }

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 36px;
  /* Preferred icon size */
  display: inline-block;
  width: 1em;
  height: 1em;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga'; }

@media screen and (max-width: 480px) {
  input[type=checkbox]:checked ~ .menu ul {
    display: block;
    left: 20px; }

  /* Make dropdown links appear inline */
  .menu ul {
    -webkit-transition: all 0.8s;
    -moz-transition: all 0.8s;
    -ms-transition: all 0.8s;
    -o-transition: all 0.8s;
    transition: all 0.8s;
    position: static;
    display: block;
    background: #19c589;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 900px;
    box-shadow: 0 0 10px; }

  .menu ul li ul {
    display: none !important; }

  /*Create vertical spacing*/
  .menu ul li {
    border: none; }

  /*Make all menu links full width*/
  .menu ul li,
  .menu ul li a {
    width: 100%; }

  .menu ul li {
    border-radius: 0; }

  .menu ul li a {
    border-bottom: solid 1px #19c589; }

  .menu ul li a:hover {
    border-radius: 0 !important; }

  .menu ul li a:active {
    background-color: #d00 !important; }

  .show-menu {
    display: block; }

  .img-fill {
    display: inline-block;
    height: 48px;
    width: 48px;
    background-color: #0cb78a;
    float: right;
    position: absolute;
    top: 0;
    right: 0; }

  .menu-position {
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0; } }
.css-tricker__loader {
  width: 100%;
  background-image: url("/img/loader.gif");
  background-image: url("/img/loader.svg");
  background-position: center;
  background-repeat: no-repeat; }

.tag-container {
  display: inline-flex;
  margin: 0;
  padding: 0;
  list-style-type: none;
  font-size: 18px; }

.tag {
  padding: 3px 8px;
  color: #333;
  background: #dedede;
  margin-right: 3px;
  border-radius: 3px; }

.designs-container {
  display: flex;
  width: 100%;
  padding: 12px; }

.designs-container--main-image {
  flex: 1; }

.designs-container--web-image {
  flex: 2; }

.designs-container--process {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin: 0 0 0 12px; }

.designs-container--process__col {
  flex: 1;
  margin-bottom: 12px; }
  .designs-container--process__col img {
    width: 100%; }

.designs-container--row {
  display: flex; }
  .designs-container--row div {
    flex: 1;
    margin: 0 4px 0 0; }
  .designs-container--row div:nth-child(even) {
    margin: 0 0 0 4px; }

.process--heading {
  font-weight: 600;
  font-size: 24px;
  color: #666; }

.process--text {
  padding: 0 28px 15px;
  font-size: 20px;
  color: #222;
  background-color: rgba(255, 255, 255, 0.95);
  box-shadow: 0 0 1px #999;
  font-family: 'Rokkitt', serif;
  flex-grow: 0; }

.home-container {
  position: relative;
  width: 950px;
  margin: 0 auto 20px auto;
  display: flex;
  top: 60px; }

.home-container__col-1 {
  width: 710px;
  margin-right: 15px; }

.home-container__col-1--text {
  padding: 15px 50px;
  font-size: 36px;
  color: #222;
  background-color: rgba(255, 255, 255, 0.95);
  box-shadow: 0 0 1px #999;
  font-family: 'Rokkitt', serif; }

.home-links-container {
  display: flex;
  font-size: 22px;
  margin-bottom: 18px; }

.home-container:last-of-type {
  margin-bottom: 100px; }

.home-links-container a {
  display: inline-flex;
  margin-right: 18px;
  color: #333; }
  .home-links-container a span img {
    width: 21px;
    margin-right: 2px; }
  .home-links-container a:hover {
    text-decoration: underline; }

.home-text {
  font-size: 20px;
  color: #222; }

.recent-post__background {
  position: relative;
  height: 259px;
  padding: 12px;
  background-color: rgba(0, 0, 0, 0.75);
  font-family: 'Rokkitt', serif;
  color: #fff;
  padding-top: 29px; }
  .recent-post__background a {
    color: #fff;
    font-size: 36px; }

.recent-post__background:after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  background: url("/img/posts/11-05-16-home-widget-bg.jpg");
  width: 100%;
  height: 100%;
  opacity: 0.5;
  z-index: -1; }

.recent-post__header {
  color: #fff;
  font-size: 21px;
  text-shadow: 0 2px 2px #000;
  font-family: 'Rokkitt', serif; }

footer {
  background-color: #3b3148;
  color: #ffffff;
  font-family: 'Rokkitt', serif;
  font-size: 18px;
  padding: 8px 18px;
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  border-top: solid 1px #D2A125; }
  footer div {
    flex: 1; }
  footer div:nth-child(even) {
    text-align: right; }

